--- a/app/src/main/res/layout/fragment_fictitious_demand.xml
+++ b/app/src/main/res/layout/fragment_fictitious_demand.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
+            app:tabSelectedTextColor="@color/burgundy"
             app:tabIndicatorColor="#FFB70050"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
