--- a/app/src/main/res/layout/fragment_actual_cup.xml
+++ b/app/src/main/res/layout/fragment_actual_cup.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".category.ClothesFragment">
+    tools:context=".category.ActualCupFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
