--- a/app/src/main/res/layout/fragment_fictitious_all.xml
+++ b/app/src/main/res/layout/fragment_fictitious_all.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".category.EtcFragment">
+    tools:context=".category.FictitiousAllFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
