--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView2">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_star"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/star_clicked" />
@@ -99,14 +99,14 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_mypage_manage">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/mypage_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="3dp"
             android:text="문의하기" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/mypage_logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -145,6 +145,7 @@
     </com.google.android.material.tabs.TabLayout>
 
     <View
+        android:id="@+id/view_mypage"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="@color/light_burgundy"
@@ -153,15 +154,17 @@
         android:layout_marginBottom="0.5dp"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/mypage_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/view_mypage"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tab_mypage" >
 
-    </androidx.viewpager.widget.ViewPager>
+        >
+
+    </androidx.viewpager2.widget.ViewPager2>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
