--- a/app/src/main/res/layout/activity_add_promotion.xml
+++ b/app/src/main/res/layout/activity_add_promotion.xml
@@ -95,14 +95,27 @@
             android:layout_height="wrap_content"
             android:hint="2021.08.01~2021.09.01"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:text="미리보기"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            android:textStyle="bold"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="미리보기"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:textStyle="bold"/>
+            <Button
+                android:id="@+id/promote_preview_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/btn_attach_image"
+                android:text="미리보기" />
+        </LinearLayout>
 
         <FrameLayout
             android:layout_marginTop="20dp"
@@ -114,9 +127,21 @@
                 android:layout_height="180dp"
                 android:background="@drawable/shape_promote_example_border"/>
             <TextView
+                android:id="@+id/promoteEx_period"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="21.nn.nn~21.nn.nn"
+                android:textSize="11dp"
+                android:textStyle="bold"/>
+            <TextView
                 android:id="@+id/promoteEx_tv"
+                android:layout_gravity="bottom"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="120dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="세상에서 제일 부드러운 \n덕성 버건디 수건"
