가수요조사폼 완성 & 굿즈리스트 뷰 수정

--- a/app/src/main/res/layout/activity_fictitious_demand_form.xml
+++ b/app/src/main/res/layout/activity_fictitious_demand_form.xml
@@ -6,38 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".FictitiousFormActivity">
 
-        <ImageView
-            android:id="@+id/img_back_actual_demand_form"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/img_back_actual_demand_form"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_baseline_arrow_back_24" />
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:text="덕성여대 버건디 수건 가수요조사"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/img_back_actual_demand_form"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.034" />
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="덕성여대 버건디 수건 가수요조사"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/img_back_actual_demand_form"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
+            android:layout_marginStart="60dp"
             android:layout_marginTop="12dp"
             android:text="*조사기간: 2021.07.20(화) ~ 2021.07.27(화)"
             android:textColor="@color/black"
@@ -51,9 +50,9 @@
             android:id="@+id/textView19"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="92dp"
-            android:text="* 필수항목"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="72dp"
+            android:text="*필수항목"
             android:textColor="@color/burgundy"
             android:textSize="11dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +92,7 @@
                 android:id="@+id/goods_detail_name"
                 android:layout_width="296dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="340dp"
+                android:layout_marginTop="300dp"
                 android:background="@drawable/shape_promote_example_border"
                 android:paddingLeft="20dp"
                 android:paddingTop="5dp"
@@ -140,11 +139,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/goods_detail_text" />
 
+
             <TextView
                 android:id="@+id/goods_quantity3"
                 android:layout_width="296dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="88dp"
+                android:layout_marginTop="14dp"
                 android:background="@drawable/shape_promote_example_border"
                 android:paddingLeft="20dp"
                 android:paddingTop="5dp"
@@ -155,8 +155,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.509"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/goods_detail_text" />
-
+                app:layout_constraintTop_toBottomOf="@+id/countDownButton" />
 
             <EditText
                 android:id="@+id/et1"
@@ -173,6 +172,47 @@
                 app:layout_constraintHorizontal_bias="0.345"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/goods_quantity3" />
+
+            <ImageButton
+                android:id="@+id/countUpButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#00ffffff"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="14dp"
+                app:layout_constraintBottom_toTopOf="@+id/goods_quantity3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/goods_quantity"
+                app:layout_constraintVertical_bias="0.0"
+                app:srcCompat="@drawable/countup" />
+
+            <ImageButton
+                android:id="@+id/countDownButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#00ffffff"
+                android:layout_marginStart="32dp"
+                android:layout_marginBottom="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/goods_quantity3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/countUpButton"
+                app:srcCompat="@drawable/countdown" />
+
+            <TextView
+                android:id="@+id/count"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:textAlignment="center"
+                android:text="1"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginBottom="15dp"
+                android:textSize="13dp"
+                android:textColor="@color/black"
+                android:background="@drawable/textview_rectangle"
+                app:layout_constraintBottom_toTopOf="@+id/goods_quantity3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/goods_quantity" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
