--- a/app/src/main/res/layout/fragment_actual_demand.xml
+++ b/app/src/main/res/layout/fragment_actual_demand.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabSelectedTextColor="@color/burgundy"
-            app:tabIndicatorColor="#FFB70050"
+            app:tabBackground="@color/white"
+            app:tabIndicatorColor="@color/burgundy"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
