feat: add post view for community tab

--- a/app/src/main/res/layout/fragment_goods_community.xml
+++ b/app/src/main/res/layout/fragment_goods_community.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".GoodsCommunityFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,11 +24,10 @@
             android:paddingRight="20dp"
             android:layout_marginLeft="20dp"/>
     </LinearLayout>
-    <ScrollView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_community_posting"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </ScrollView>
+        android:layout_height="wrap_content"
+        app:layoutManager="LinearLayoutManager"/>
 </LinearLayout>
