--- a/app/src/main/res/layout/goods_community_post_item.xml
+++ b/app/src/main/res/layout/goods_community_post_item.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <LinearLayout
         android:paddingLeft="20dp"
         android:paddingTop="20dp"
@@ -13,7 +15,7 @@
             android:layout_height="40dp"
             android:src="@drawable/ic_launcher_foreground"/>
         <TextView
-            android:id="@+id/depositorName"
+            android:id="@+id/tv_depositor_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -21,6 +23,7 @@
             android:textSize="20dp"
             android:text="김덕우"/>
     </LinearLayout>
+
     <LinearLayout
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -28,6 +31,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/tv_post_contents"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
@@ -41,6 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="2px"
         android:background="#D9D9D9"/>
+
     <LinearLayout
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -60,8 +65,10 @@
             android:textSize="17dp"
             android:layout_marginLeft="5dp"/>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="15px"
         android:background="#D9D9D9"/>
+
 </LinearLayout>
