실수요조사 폼 xml 수정 - type, padding

--- a/app/src/main/res/layout/activity_actual_demand_form.xml
+++ b/app/src/main/res/layout/activity_actual_demand_form.xml
@@ -272,7 +272,7 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/border_black"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="phone"
                     android:padding="5dp"
                     android:paddingStart="10dp" />
 
@@ -405,7 +405,7 @@
                     android:inputType="textPersonName"
                     android:hint="덕성은행 123412341234"
                     android:textSize="14sp"
-                    android:padding="5dp"
+                    android:padding="7dp"
                     android:paddingStart="10dp" />
 
                 <CheckBox
