--- a/app/src/main/res/layout/activity_fictitious_demand_form.xml
+++ b/app/src/main/res/layout/activity_fictitious_demand_form.xml
@@ -218,4 +218,17 @@
 
     </ScrollView>
 
+    <Button
+        android:id="@+id/btn_register_actual_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@color/burgundy"
+        android:text="폼 제출하기"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
