--- a/app/src/main/res/layout/activity_actual_demand_posting.xml
+++ b/app/src/main/res/layout/activity_actual_demand_posting.xml
@@ -157,48 +157,48 @@
                     android:paddingBottom="8dp"
                     android:orientation="horizontal">
 
-                    <Button
+                    <ImageView
                         android:id="@+id/btn_actual_posting_img1"
                         android:layout_width="140dp"
                         android:layout_height="140dp"
                         android:layout_marginStart="22dp"
                         android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="+"
-                        android:textSize="40sp"
+                        android:padding="5dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_plus"
                         android:background="@drawable/border_black"/>
 
-                    <Button
+                    <ImageView
                         android:id="@+id/btn_actual_posting_img2"
                         android:layout_width="140dp"
                         android:layout_height="140dp"
                         android:layout_marginStart="22dp"
                         android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="+"
-                        android:textSize="40sp"
+                        android:padding="5dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_plus"
                         android:background="@drawable/border_black"/>
 
-                    <Button
+                    <ImageView
                         android:id="@+id/btn_actual_posting_img3"
                         android:layout_width="140dp"
                         android:layout_height="140dp"
                         android:layout_marginStart="22dp"
                         android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="+"
-                        android:textSize="40sp"
+                        android:padding="5dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_plus"
                         android:background="@drawable/border_black"/>
 
-                    <Button
+                    <ImageView
                         android:id="@+id/btn_actual_posting_img4"
                         android:layout_width="140dp"
                         android:layout_height="140dp"
                         android:layout_marginStart="22dp"
                         android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="+"
-                        android:textSize="40sp"
+                        android:padding="5dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_plus"
                         android:background="@drawable/border_black"/>
 
                 </LinearLayout>
