--- a/app/src/main/res/layout/popup_dialog.xml
+++ b/app/src/main/res/layout/popup_dialog.xml
@@ -5,21 +5,16 @@
     android:background="@drawable/popup_dialog_border"
     android:layout_margin="20dp"
     android:padding="30dp">
-    <ImageView
-        android:id="@+id/dialogClose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/outline_close_24"
-        android:layout_gravity="right"/>
+
     <TextView
         android:id="@+id/dialogText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:textAlignment="center"
         android:text="텍스트"
-        android:textSize="20dp"
-        android:textColor="@color/black"/>
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
     <Button
         android:id="@+id/dialogBtn"
         android:layout_width="match_parent"
