마이페이지 수정

--- a/app/src/main/res/layout/item_mypage_buy.xml
+++ b/app/src/main/res/layout/item_mypage_buy.xml
@@ -13,7 +13,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/ic_launcher_background"
+        />
 
     <TextView
         android:id="@+id/tv_mypage_buy_name"
@@ -62,14 +63,16 @@
         android:layout_marginTop="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/circle_profile" />
+        android:background="@drawable/circle_state"
+        android:padding="5dp"
+        />
 
     <TextView
         android:id="@+id/tv_mypage_buy_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
-        android:text="배송중"
+        android:text=""
         android:textSize="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_mypage_state" />
