--- a/app/src/main/res/layout/depositior_item.xml
+++ b/app/src/main/res/layout/depositior_item.xml
@@ -19,14 +19,15 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1" />
-        <!--
+
         <CheckBox
+            android:id="@+id/depositorChecked"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:padding="15dp"
             android:layout_gravity="right"/>
-        -->
+        <!--
         <ImageView
             android:id="@+id/depositorChecked"
             android:layout_width="50dp"
@@ -35,6 +36,7 @@
 
             android:padding="15dp"
             android:layout_gravity="right"/>
+            -->
     </LinearLayout>
     <View
         android:layout_width="match_parent"
