--- a/app/src/main/res/layout/item_mypage_sell.xml
+++ b/app/src/main/res/layout/item_mypage_sell.xml
@@ -28,8 +28,11 @@
         app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/tv_mypage_sell_percent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="3dp"
@@ -39,8 +42,10 @@
         android:text="40%"
         android:textColor="@color/burgundy"
         android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        />
+
+
+
 
     <TextView
         android:id="@+id/tv_mypage_sell_state"
@@ -49,45 +54,99 @@
         android:layout_marginTop="3dp"
         android:text="실수요조사중"
         android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_mypage_sell_percent"
         app:layout_constraintStart_toStartOf="@+id/tv_mypage_sell_percent"
+        app:layout_constraintEnd_toEndOf="@+id/tv_mypage_sell_percent"
         app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_percent" />
 
-    <TextView
-        android:id="@+id/tv_mypage_sell_promotion"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="3dp"
-        android:text="홍보 뷰 등록"
-        android:textSize="10sp"
-        android:textColor="@color/black"
-        android:padding="3dp"
+        android:id="@+id/linear_actual"
         app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
-        app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name"
+        android:layout_marginLeft="12dp"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/linear_actual_1"
+            app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
+            app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/linear_actual_2"
+                app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
+                app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name"
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:text="|"
-        android:textSize="10sp"
-        android:textColor="@color/black"
-        android:padding="3dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_mypage_sell_promotion"
-        app:layout_constraintStart_toEndOf="@+id/tv_mypage_sell_promotion"
-        app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name" />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tv_mypage_sell_promotion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="홍보 뷰 등록"
+                    android:textSize="10sp"
+                    android:textColor="@color/black"
+                    android:padding="3dp" />
 
-    <TextView
-        android:id="@+id/tv_mypage_sell_depositer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="3dp"
-        android:text="입금자 목록"
-        android:textColor="@color/black"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_mypage_sell_promotion"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="|"
+                    android:textSize="10sp"
+                    android:textColor="@color/black"
+                    android:padding="3dp" />
+
+                <TextView
+                    android:id="@+id/tv_mypage_sell_depositer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="3dp"
+                    android:text="입금자 목록"
+                    android:layout_marginTop="3dp"
+                    android:textColor="@color/black"
+                    android:textSize="10sp"
+                    />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="|"
+                    android:textSize="10sp"
+                    android:textColor="@color/black"
+                    android:padding="3dp"
+                    />
+            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_mypage_sell_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:padding="3dp"
+                android:layout_marginTop="3dp"
+                android:text="수정 및 삭제"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name"
+                app:layout_constraintStart_toEndOf="@+id/linear_actual"
+                android:textSize="10sp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_mypage_sell_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="10sp"
+            android:padding="3dp"
+            android:layout_marginTop="3dp"
+            />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
