--- a/app/src/main/res/layout/popup_delete_dialog.xml
+++ b/app/src/main/res/layout/popup_delete_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="텍스트"
+        android:text="포스팅을 삭제하시겠습니까? \n 삭제 후 복구되지 않습니다."
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="16sp" />
