--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".GoodsDetailActivity">
+    tools:context=".goodsEx.GoodsDetailActivity">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="60dp">
