--- a/app/src/main/res/layout/fragment_goods_detail.xml
+++ b/app/src/main/res/layout/fragment_goods_detail.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="40dp"
-    tools:context=".GoodsDetailFragment">
+    tools:context=".goodsEx.GoodsDetailFragment">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -14,12 +14,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/ivGoodsDetail"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:src="@drawable/goods_detail"/>
 
             <TextView
-                android:id="@+id/goods_detail_name"
+                android:id="@+id/tvGoodsDetailTitle"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_marginTop="10dp"
@@ -32,7 +33,7 @@
                 android:paddingTop="5dp"/>
 
             <TextView
-                android:id="@+id/goods_detail_text"
+                android:id="@+id/tvGoodsDetailDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
