--- a/app/src/main/res/layout/item_mypage_sell.xml
+++ b/app/src/main/res/layout/item_mypage_sell.xml
@@ -1,152 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/img_mypage_sell"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_mypage_sell_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="3dp"
-        android:text="덕성 버건디 수건"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/img_mypage_sell"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_launcher_background" />
 
-
-    <TextView
-        android:id="@+id/tv_mypage_sell_percent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="15dp"
-        android:background="@drawable/circle_state"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="40%"
-        android:textColor="@color/burgundy"
-        android:textSize="10sp"
-        />
-
-
-
-
-    <TextView
-        android:id="@+id/tv_mypage_sell_state"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:text="실수요조사중"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_mypage_sell_percent"
-        app:layout_constraintEnd_toEndOf="@+id/tv_mypage_sell_percent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_percent" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/linear_actual"
-        app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
-        app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name"
-        android:layout_marginLeft="12dp"
-        android:orientation="horizontal">
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_mypage_sell_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/linear_actual_1"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="3dp"
+            android:text="덕성 버건디 수건"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
-            app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name"
-            android:orientation="horizontal">
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/tv_mypage_sell_percent"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/circle_state"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="40%"
+            android:textColor="@color/burgundy"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/tv_mypage_sell_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:text="실수요조사중"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_mypage_sell_percent"
+            app:layout_constraintStart_toStartOf="@+id/tv_mypage_sell_percent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_percent" />
+
+        <LinearLayout
+            android:id="@+id/linear_actual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
+            app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name">
+
             <LinearLayout
+                android:id="@+id/linear_actual_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/linear_actual_2"
+                android:orientation="horizontal"
                 app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
-                app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name"
+                app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name">
 
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/tv_mypage_sell_promotion"
+                <LinearLayout
+                    android:id="@+id/linear_actual_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintStart_toEndOf="@+id/img_mypage_sell"
+
+                    app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name">
+
+                    <TextView
+                        android:id="@+id/tv_mypage_sell_promotion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:padding="3dp"
+                        android:text="홍보 뷰 등록"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:padding="3dp"
+                        android:text="|"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/tv_mypage_sell_depositer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:padding="3dp"
+                        android:text="입금자 목록"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:padding="3dp"
+                        android:text="|"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_mypage_sell_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
                     android:layout_marginTop="3dp"
-                    android:text="홍보 뷰 등록"
-                    android:textSize="10sp"
-                    android:textColor="@color/black"
-                    android:padding="3dp" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="|"
-                    android:textSize="10sp"
-                    android:textColor="@color/black"
-                    android:padding="3dp" />
-
-                <TextView
-                    android:id="@+id/tv_mypage_sell_depositer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="입금자 목록"
-                    android:layout_marginTop="3dp"
+                    android:text="수정 및 삭제"
                     android:textColor="@color/black"
                     android:textSize="10sp"
-                    />
+                    app:layout_constraintStart_toEndOf="@+id/linear_actual"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name" />
 
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="|"
-                    android:textSize="10sp"
-                    android:textColor="@color/black"
-                    android:padding="3dp"
-                    />
             </LinearLayout>
+
             <TextView
-                android:id="@+id/tv_mypage_sell_delete"
+                android:id="@+id/tv_mypage_sell_complete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:padding="3dp"
                 android:layout_marginTop="3dp"
-                android:text="수정 및 삭제"
-                android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@+id/tv_mypage_sell_name"
-                app:layout_constraintStart_toEndOf="@+id/linear_actual"
+                android:padding="3dp"
+                android:text=""
                 android:textSize="10sp" />
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_mypage_sell_complete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textSize="10sp"
-            android:padding="3dp"
-            android:layout_marginTop="3dp"
-            />
-
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
